--- a/DockerfileRPI
+++ b/DockerfileRPI
@@ -1,9 +1,9 @@
 FROM armhf/debian:latest
 
-RUN apt-get update -y
-RUN apt-get install -y python3 python3-pip git autoconf automake libtool
-RUN apt-get clean
-RUN rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* build/
+RUN apt-get update -y && \
+  apt-get install -y python3 python3-pip git autoconf automake libtool && \
+  apt-get clean && \
+  rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* build/
 
 RUN mkdir -p /usr/src/app /usr/src/build
 WORKDIR /usr/src/build
@@ -13,6 +13,7 @@ RUN python3 -m pip install cython
 RUN git clone https://github.com/ggravlingen/pytradfri.git
 WORKDIR /usr/src/build/pytradfri/script
 RUN ./install-aiocoap.sh
+RUN ./install-coap-client.sh
 
 WORKDIR /usr/src/build/pytradfri
 RUN python3 setup.py install
