--- a/DockerfileRPI
+++ b/DockerfileRPI
@@ -9,6 +9,7 @@ RUN mkdir -p /usr/src/app /usr/src/build
 WORKDIR /usr/src/build
 
 RUN python3 -m pip install cython
+RUN python3 -m pip install ipython
 
 RUN git clone https://github.com/ggravlingen/pytradfri.git
 WORKDIR /usr/src/build/pytradfri/script
