--- a/devices.ini
+++ b/devices.ini
@@ -3,6 +3,16 @@ dimmable = True
 haswb = True
 hasrgb = False
 
+[TRADFRI bulb E14 W op/ch 400lm]
+dimmable = True
+haswb = False
+hasrgb = False
+
+[TRADFRI bulb E27 W opal 1000lm]
+dimmable = True
+haswb = False
+hasrgb = False
+
 [TRADFRI bulb E27 WS opal 980lm]
 dimmable = True
 haswb = True
