--- a/DockerfileRPI
+++ b/DockerfileRPI
@@ -1,7 +1,7 @@
-FROM armhf/debian:latest
+FROM resin/rpi-raspbian:stretch
 
 RUN apt-get update -y && \
-  apt-get install -y python3 python3-pip git autoconf automake libtool && \
+  apt-get install -y python3 python3-pip git autoconf automake libtool make && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* build/
 
