--- a/DockerfileRPI
+++ b/DockerfileRPI
@@ -1,13 +1,15 @@
 FROM resin/rpi-raspbian:stretch
 
 RUN apt-get update -y && \
-  apt-get install -y python3 python3-pip git autoconf automake libtool make && \
+  apt-get install -y python3 python3-pip git autoconf automake libtool make python3-dev && \
   apt-get clean && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* build/
 
 RUN mkdir -p /usr/src/app /usr/src/build
 WORKDIR /usr/src/build
 
+RUN python3 -m pip install setuptools
+RUN python3 -m pip install wheel
 RUN python3 -m pip install cython
 RUN python3 -m pip install ipython
 
