--- a/DockerfileRPI
+++ b/DockerfileRPI
@@ -28,6 +28,8 @@ RUN pip3 install twisted
 
 WORKDIR /usr/src/app
 COPY tradfri.tac /usr/src/app
+COPY configure.py /usr/src/app
+COPY adapter_start.sh /usr/src/app
 
 EXPOSE 1234
-CMD python3 tradfri.tac
+CMD /usr/src/app/adapter_start.sh
