Information about group members is stored. This information utilized to keep status for group updated (with  hanges to any group member). An additional feature is piggybacked: Psychedelic color, which means that RGB color is set randomly for every heartbeat. The Psychedelic feature is optional and need to be enabled before creation of the color switch in Domoticz.

--- a/devices.ini
+++ b/devices.ini
@@ -35,6 +35,11 @@ hasrgb = False
 
 [TRADFRI transformer 30W]
 dimmable = True
-haswb = True
+haswb = False
+hasrgb = False
+
+[TRADFRI Driver 10W]
+haswb = False
+dimmable = True
 hasrgb = False
 
