--- a/Docker/Dockerfile.compile
+++ b/Docker/Dockerfile.compile
@@ -3,49 +3,49 @@ FROM moroen/ubuntu-cmake:latest AS builder
 ARG MAKE_FLAGS="-j4"
 
 ARG DOMOTICZ_VERSION="stable"
+ARG TRADFRICOAP_VERSION="master"
+ARG PY3COAP_VERSION="master"
 
 ARG DEBIAN_FRONTEND=noninteractive
 ENV TZ=Europe/Oslo
 RUN apt update
 
-RUN apt install -y tzdata wget git python3-dev python3-pip libboost-dev libboost-thread-dev libssl-dev curl libcurl4-openssl-dev 
-RUN apt install -y autoconf automake libtool zlib1g-dev libcereal-dev liblua5.3-dev lua5.3 libmosquitto-dev
-RUN apt install -y libssl1.1 libcurl3-gnutls python3 python3-dev libmosquitto-dev libusb-0.1-4
+RUN apt install -y tzdata wget git python3-dev python3-pip libboost-dev libboost-thread-dev libssl-dev curl libcurl4-openssl-dev autoconf automake libtool zlib1g-dev libcereal-dev liblua5.3-dev lua5.3 libmosquitto-dev libssl1.1 libcurl3-gnutls python3 python3-dev libmosquitto-dev libusb-0.1-4 golang
 
-# RUN git clone --branch development https://github.com/domoticz/domoticz.git /src/domoticz
-# RUN git clone --depth 1 https://github.com/OpenZWave/open-zwave.git /src/open-zwave-read-only
+RUN git clone --branch development https://github.com/domoticz/domoticz.git /src/domoticz
+RUN git clone --depth 1 https://github.com/OpenZWave/open-zwave.git /src/open-zwave-read-only
 
-# WORKDIR /src/open-zwave-read-only
-# RUN make ${MAKE_FLAGS}
-# RUN make install
-
-# WORKDIR /src/domoticz
-# RUN cmake -DUSE_BUILTIN_MQTT=NO .
-# RUN make ${MAKE_FLAGS}
-# RUN make install
-
-# RUN mkdir /opt/download
-# COPY download.sh /opt/download
-# WORKDIR /opt/download
-
-# RUN /bin/sh download.sh ${DOMOTICZ_VERSION}
-
-# RUN mkdir /opt/domoticz
-
-# RUN tar xzf domoticz_release.tgz -C /opt/domoticz
-
-# FROM ubuntu:latest
-# COPY --from=builder /opt/domoticz /opt/domoticz
-
-COPY tradfricoap /src/tradfricoap
-WORKDIR /src/tradfricoap
-RUN python3 setup.py develop
-
-
-EXPOSE 8080
-
-# RUN pip3 install tradfricoap
-RUN mkdir -p /config
+WORKDIR /src/open-zwave-read-only
+RUN make ${MAKE_FLAGS}
+RUN make install
 
 WORKDIR /src/domoticz
-# CMD /opt/domoticz/domoticz -dbase /config/domoticz.db -log /config/domoticz.log
+RUN cmake -DUSE_BUILTIN_MQTT=NO .
+RUN make ${MAKE_FLAGS}
+RUN make install
+
+COPY . /opt/domoticz/plugins/IKEA-Tradfri
+
+RUN git clone --branch ${TRADFRICOAP_VERSION} https://github.com/moroen/tradfricoap.git /src/tradfricoap
+RUN git clone --branch ${PY3COAP_VERSION} https://github.com/moroen/pycoap.git /src/pycoap 
+
+RUN pip3 install setuptools
+
+WORKDIR /src/pycoap
+RUN make module
+WORKDIR /src/tradfricoap
+RUN python3 setup.py install
+
+FROM ubuntu:latest
+COPY --from=builder /opt/domoticz /opt/domoticz
+COPY --from=builder /usr/local/lib/python3.8/dist-packages /usr/local/lib/python3.8/dist-packages
+COPY --from=builder /usr/lib/python3/dist-packages /usr/lib/python3/dist-packages
+
+RUN apt update && apt install -y libssl1.1 libcurl4 python3 python3-dev libmosquitto-dev libusb-0.1-4 libcurl4-gnutls-dev
+
+EXPOSE 8080
+EXPOSE 8085
+
+WORKDIR /opt/domoticz
+RUN mkdir -p /config
+CMD /opt/domoticz/domoticz -dbase /config/domoticz.db -log /config/domoticz.log
